--- a/manifest.json
+++ b/manifest.json
@@ -6,14 +6,16 @@
     "version": "1.0",
   
     "browser_action": {
-     "default_icon": "icon.png",
+     "default_icon": "rfrshicon_44.png",
      "default_popup": "popup.html"
     },
     "background": {
-        "scripts": ["background.js"],
-        "persistent": false
+        "scripts": ["background.js"]
     },
     "permissions": [
      "activeTab"
+    ],
+    "web_accessible_resources": [
+        "rfrshicon_44.png"
     ]
 }
